--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -58,42 +58,24 @@ $--transition-time: 300ms;
   transform: translate3d(-50%, 0, 0) !important;
   transition: transform $--transition-time;
 }
-
-.van-tab--active{
-  font-weight: 400 !important;
-  color: #2F7DCD !important;
+// search 
+.van-search__content{
+  border-radius: 2px;
+  box-shadow: 0 0 5px 2px rgba(131,138,157,0.10);
 }
-.van-tabs__line{
-  width: 86px !important;
+// cell
+.van-collapse-item::after,
+.van-cell::after{
+  left: 0!important;
+  right: 0!important;
 }
-.vant-tab{
-  font-size: 17px !important;
-  color: #000000 !important;
-}
-.van-tabs__nav--line{
-  box-shadow: 0 0 0 0 #D4D4D4;
-}
-// 全局底部按钮样式
-.btn_bottom{
-  width:100%;
-  height: 46px;
-  line-height: 46px;
-  position: fixed;
-  bottom: 0;
-  left:0;
-  right:0;
-  background:#2F7DCD;
-  font-size: 16px;
-  color:#fff;
-  border:none;
-  z-index:98;
-}
-
-.van-title{
-  margin: 0;
-  padding: 32px 16px 16px;
-  color: rgba(69, 90, 100, 0.6);
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 16px;
+// tab
+.van-tab{
+  .van-info{
+    display: none;
+  }
+  &--active .van-info{
+    display: block;
+    transform: translate(0, 0);
+  }
 }
