--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -58,6 +58,15 @@ $--transition-time: 300ms;
   transform: translate3d(-50%, 0, 0) !important;
   transition: transform $--transition-time;
 }
+// common
+.van-title{
+  margin: 0;
+  padding: 32px 16px 16px;
+  color: rgba(69, 90, 100, 0.6);
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+}
 // search 
 .van-search__content{
   border-radius: 2px;
@@ -76,6 +85,6 @@ $--transition-time: 300ms;
   }
   &--active .van-info{
     display: block;
-    transform: translate(0, 0);
+    transform: translate(20%, 0);
   }
 }
