--- a/src/style/vant_variable.less
+++ b/src/style/vant_variable.less
@@ -113,3 +113,6 @@
 @collapse-item-content-text-color: @gray-6;
 @collapse-item-content-background-color: @white;
 @collapse-item-title-disabled-color: @gray-5;
+
+// Dialog
+@dialog-border-radius: 5px;
