--- a/src/style/vant_variable.less
+++ b/src/style/vant_variable.less
@@ -15,13 +15,13 @@
 @orange-dark: #ed6a0c;
 @orange-light: #fffbe8;
 @green: #07c160;
-@tab-active-color: #FFA000;
-@deepBlue: #2f448A;
-@gray-9: #3C4353;
-@gray-10: #A6AAB8;
-@gray-11: #F6F7F9;
-@gray-12: #E5E9EF;
-@gray-13: #838A9D;
+@tab-active-color: #ffa000;
+@deepBlue: #2f448a;
+@gray-9: #3c4353;
+@gray-10: #a6aab8;
+@gray-11: #f6f7f9;
+@gray-12: #e5e9ef;
+@gray-13: #838a9d;
 @body-bg: #f9f9f9;
 // Font
 @font-size-xs: 10px;
@@ -116,3 +116,31 @@
 
 // Dialog
 @dialog-border-radius: 5px;
+
+// 导出变量
+:export {
+  black: @black;
+  white: @white;
+  gray1: @gray-1;
+  gray2: @gray-2;
+  gray3: @gray-3;
+  gray4: @gray-4;
+  gray5: @gray-5;
+  gray6: @gray-6;
+  gray7: @gray-7;
+  gray8: @gray-8;
+  red: @red;
+  blue: @blue;
+  orange: @orange;
+  orangeDark: @orange-dark;
+  orangeLight: @orange-light;
+  green: @green;
+  tabActiveColor: @tab-active-color;
+  deepBlue: @deepBlue;
+  gray9: @gray-9;
+  gray10: @gray-10;
+  gray11: @gray-11;
+  gray12: @gray-12;
+  gray13: @gray-13;
+  bodyBg: @body-bg;
+}
