--- a/src/views/driver/DriverList/components/DriverItem.less
+++ b/src/views/driver/DriverList/components/DriverItem.less
@@ -40,11 +40,10 @@
   border: 1px solid #3ACB8D;
   border-radius: 24px;
   color: #3ACB8D;
-  padding: 0 8px;
+  padding: 2px 8px;
+  line-height: normal;
   box-sizing: border-box;
-  font-size: @font-size-md;
-  height: 20px;
-  line-height: 20px;
+  font-size: 12px;
 }
 .itemInfo{
   padding: 6px 0 6px 15px;
