--- a/src/views/driver/DriverList/components/DriverItem.less
+++ b/src/views/driver/DriverList/components/DriverItem.less
@@ -44,6 +44,7 @@
   line-height: normal;
   box-sizing: border-box;
   font-size: 12px;
+  margin-bottom: 2px;
 }
 .itemInfo{
   padding: 6px 0 6px 15px;
