乔宇修改样式

--- a/src/views/clue/components/CuleItem.less
+++ b/src/views/clue/components/CuleItem.less
@@ -49,7 +49,7 @@
 .itemInfo{
   padding: 0 0 6px 0;
   box-sizing: border-box;
-  border-bottom: 1px solid #D8D8D8
+  // border-bottom: 1px solid #D8D8D8
 }
 .detailBtn{
   text-align: center;
