--- a/src/views/driver/DriverList/components/DriverItem.less
+++ b/src/views/driver/DriverList/components/DriverItem.less
@@ -44,10 +44,10 @@
   line-height: normal;
   box-sizing: border-box;
   font-size: 12px;
-  margin-bottom: 2px;
+  margin: 4px 0;
 }
 .itemInfo{
-  padding: 6px 0 6px 15px;
+  padding: 0 0 6px 0;
   box-sizing: border-box;
   border-bottom: 1px solid #D8D8D8
 }
